[gd_scene load_steps=2 format=3 uid="uid://dua2vx4bi1gmf"]

[ext_resource type="Script" uid="uid://b4q0diu63qlg8" path="res://addons/asset_placer/ui/asset_placer_options/asset_placer_options.gd" id="1_7uy5w"]

[node name="AssetPlacerOptions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7uy5w")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Options"

[node name="SnappingHeader" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/SnappingHeader"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/SnappingHeader"]
layout_mode = 2
text = "Snapping Options"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer/SnappingHeader"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="GridSnappingCheckbox" type="CheckBox" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Use Grid Snapping"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Grid Step"

[node name="GridSnapValueSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
step = 0.10000000000582077
value = 1.0000000000582077

[node name="TransformHeader" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/TransformHeader"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/TransformHeader"]
layout_mode = 2
text = "Transformations"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer/TransformHeader"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Rotation"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Axis"

[node name="XRotationCheckbox" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "X"

[node name="YRotationCheckbox" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Y"

[node name="ZRotationCheckbox" type="CheckBox" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Z"
